# openkb-platform

./: .dockerignore  .env.azure.example  .env.docker  .env.example  .gitignore  Dockerfile  Dockerfile.compiler-worker  Dockerfile.generator-api  Dockerfile.mcp-server  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
architecture/: export.sh  workspace.dsl
compiler_worker/: __main__.py  blob_client.py  config.py  exceptions.py  job.py  models.py  queue_client.py  sidecar.py  worker.py
generator_api/: __init__.py  __main__.py  app.py  blob.py  config.py  db.py  exceptions.py  models.py  pool.py  router.py  service.py  sidecar.py
mcp_server/: __main__.py  app.py  config.py  db.py  dispatcher.py  exceptions.py
mcp_server/tools/: ask_kb.py  list_kbs.py
openkb/: cli.py  lint.py  state.py
openkb/agent/: chat.py
openkb/api/: app.py  deps.py  models.py
openkb/api/routes/: kb.py  sidecar.py
openkb/db/: __init__.py  engine.py  metadata.py
openkb/db/migrations/: env.py  script.py.mako
openkb/db/migrations/versions/: 0001_phase0_initial_schema.py  0002_add_compiler_jobs_queue.py
openkb/deck/: creator.py
openkb/services/: __init__.py  add_document.py  init_kb.py  list_kb.py  query_kb.py  status_kb.py
openkb/skill/: generator.py
openkb/storage/: __init__.py  azure_blob.py  base.py  local.py
research/: 00-overview.md  01-architecture.md  02-data-model.md  03-auth-authn.md  04-authz-roles.md  05-mcp-integration.md  06-api-spec.md  07-web-ui-ux.md  08-admin-ops.md  09-deployment.md  10-roadmap-phasing.md
scripts/: db_seed.py  ingest_marketing_kb.py  run_job.py  test_ingest.sh  test_query.sh
skills/openkb-deck-neon/: SKILL.md
specs/001-fastapi-http-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fastapi-http-api/checklists/: requirements.md
specs/001-fastapi-http-api/contracts/: kb-api.md
specs/001-phase0-postgres-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase0-postgres-schema/checklists/: requirements.md
specs/001-phase0-postgres-schema/contracts/: db-session-factory.md
specs/002-compiler-worker-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-compiler-worker-skeleton/checklists/: requirements.md
specs/002-compiler-worker-skeleton/contracts/: blob-storage-paths.md  env-config.md  job-queue-message.md  sidecar-http-api.md
specs/003-generator-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-generator-api/checklists/: requirements.md
specs/003-generator-api/contracts/: env-config.md  generator-api-http.md  sidecar-spawn.md
specs/005-phase0-chat-sessions/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/005-phase0-chat-sessions/checklists/: requirements.md
specs/005-phase0-chat-sessions/contracts/: chat-http.md
specs/006-sidecar-isolation-validation/: RUNBOOK.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-sidecar-isolation-validation/checklists/: requirements.md
specs/006-sidecar-isolation-validation/contracts/: kb-fixture-schema.md  test-invocation.md
specs/007-postgres-job-queue/: plan.md  spec.md  tasks.md
specs/007-postgres-job-queue/contracts/: queue-schema.md
specs/008-repo-split/: plan.md  spec.md  tasks.md
specs/009-fastmcp-kb-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-fastmcp-kb-server/checklists/: requirements.md
specs/009-fastmcp-kb-server/contracts/: mcp-tools.md
specs/010-persistent-kb-sidecar-pool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-persistent-kb-sidecar-pool/checklists/: requirements.md
specs/010-persistent-kb-sidecar-pool/contracts/: invalidate-endpoint.md  query-endpoint.md
specs/011-delete-document-endpoint/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-delete-document-endpoint/checklists/: requirements.md
specs/011-delete-document-endpoint/contracts/: delete-document.md
tests/: test_add_command.py  test_deck_neon_prompt.py  test_lint.py  test_remove.py  test_url_ingest.py
tests/db/: conftest.py  test_factory.py  test_forward_compat.py  test_migrations.py  test_seed.py
tests/integration/compiler_worker/: conftest.py  test_failure_recording.py  test_job_lifecycle.py  test_stale_recovery.py
tests/integration/generator_api/: conftest.py  test_delete_document.py  test_query_e2e.py
tests/integration/mcp_server/: test_mcp_server_http.py
tests/isolation/: Dockerfile  conftest.py  test_concurrent_query_isolation.py  test_port_isolation.py  test_process_state_isolation.py  test_scratch_directory_isolation.py  test_sequential_reuse_safety.py
tests/isolation/fixtures/kb_a/: astronomy-intro.md
tests/isolation/fixtures/kb_b/: botany-intro.md
tests/isolation/helpers/: blob_helpers.py  process_helpers.py
tests/unit/compiler_worker/: test_blob.py  test_config.py  test_job.py  test_queue.py  test_sidecar.py
tests/unit/generator_api/: test_blob_helpers.py  test_pool.py  test_router_invalidate.py  test_router_query.py  test_service.py  test_sidecar.py
tests/unit/mcp_server/: test_ask_kb.py  test_dispatcher.py  test_list_kbs.py
