[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openkb"
dynamic = ["version"]
description = "OpenKB: Open LLM Knowledge Base, powered by PageIndex"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kylin", email = "quanqi@pageindex.ai"},
    {name = "Ray", email = "ray@vectify.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "rag", "retrieval", "knowledge-base", "llm", "pageindex", "agents", "document"]
# All dependencies are pinned exactly (supply-chain caution — e.g. the
# litellm package-poisoning incident). Bump deliberately after vetting
# each release.
# litellm 1.87.2 fixes the chatgpt/* (ChatGPT subscription) provider
# returning empty Responses output (BerriAI/litellm#25429) and
# auto-injects GitHub Copilot IDE-auth headers.
dependencies = [
    "pageindex==0.3.0.dev1",
    "markitdown[docx,pptx,xlsx,xls]==0.1.5",
    "trafilatura==2.0.0",
    "click==8.4.0",
    "watchdog==6.0.0",
    "litellm==1.87.2",
    "openai-agents==0.17.3",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "json-repair==0.59.10",
    "prompt_toolkit==3.0.52",
    "rich==15.0.0",
    "portalocker==3.2.0",
]

[project.urls]
Repository = "https://github.com/VectifyAI/OpenKB"
Homepage = "https://github.com/VectifyAI/OpenKB"
Issues = "https://github.com/VectifyAI/OpenKB/issues"

[project.scripts]
openkb = "openkb.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
# DB extra — adds SQLAlchemy Core 2.x (async), asyncpg driver, and Alembic
# migrations.  Required by openkb.db and by `alembic upgrade head`.
# sqlalchemy[asyncio] pulls in greenlet which is needed for the async engine.
# asyncpg 0.30.0 is the first release with full Python 3.12/3.13 support.
# alembic 1.14.1 adds native asyncio runner support used in env.py.
db = [
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
]

# API extra — adds FastAPI, ASGI server, and Azure Blob Storage SDK.
# Installing this extra is required before running `openkb serve`.
# azure-storage-blob[aio] provides the async BlobServiceClient used by
# AzureBlobStorageBackend; it also works unchanged against Azurite (local emulator).
api = [
    "fastapi==0.137.2",
    "uvicorn[standard]==0.49.0",
    "azure-storage-blob[aio]==12.24.0",
    "pydantic-settings==2.10.1",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    # httpx is required by FastAPI's async TestClient (httpx.AsyncClient transport)
    "httpx==0.28.1",
    # anyio provides async test fixtures and the pytest-anyio plugin
    "anyio==4.14.0",
    # db deps pulled in so tests/db/ can import openkb.db without installing the
    # db extra separately
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["openkb"]
