[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openkb-platform"
dynamic = ["version"]
description = "OpenKB platform — generator-api, compiler-worker, Docker Compose stack"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "ppatel-skillsoft"},
]
keywords = ["ai", "rag", "knowledge-base", "llm", "generator-api", "compiler-worker"]
# openkb-core is pinned to an exact git tag.
# To upgrade: bump the @vX.Y.Z tag, run uv sync, rebuild Docker images,
# and run docker compose --profile test run --rm isolation-tests before merging.
dependencies = [
    "openkb-core @ git+https://github.com/ppatel-skillsoft/openkb-core@v0.1.0",
    # generator-api dependencies
    "fastapi==0.137.2",
    "uvicorn[standard]==0.49.0",
    "pydantic-settings==2.10.1",
    "azure-storage-blob[aio]==12.24.0",
    "httpx==0.28.1",
    # compiler-worker dependencies
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "aiofiles==23.2.1",
]

[project.urls]
Repository = "https://github.com/ppatel-skillsoft/openkb-platform"
Core = "https://github.com/ppatel-skillsoft/openkb-core"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
# DB extra — adds SQLAlchemy Core 2.x (async), asyncpg driver, and Alembic
# migrations.  Required by openkb.db and by `alembic upgrade head`.
# sqlalchemy[asyncio] pulls in greenlet which is needed for the async engine.
# asyncpg 0.30.0 is the first release with full Python 3.12/3.13 support.
# alembic 1.14.1 adds native asyncio runner support used in env.py.
db = [
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
]

# API extra — adds FastAPI, ASGI server, and Azure Blob Storage SDK.
# Installing this extra is required before running `openkb serve`.
# azure-storage-blob[aio] provides the async BlobServiceClient used by
# AzureBlobStorageBackend; it also works unchanged against Azurite (local emulator).
api = [
    "fastapi==0.137.2",
    "uvicorn[standard]==0.49.0",
    "azure-storage-blob[aio]==12.24.0",
    "pydantic-settings==2.10.1",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    # httpx is required by FastAPI's async TestClient (httpx.AsyncClient transport)
    "httpx==0.28.1",
    # anyio provides async test fixtures and the pytest-anyio plugin
    "anyio==4.14.0",
    # db deps pulled in so tests/db/ can import openkb.db without installing the
    # db extra separately
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
]
# isolation-tests extra — everything needed to run tests/isolation/ inside Docker.
# psutil 6.x provides cross-platform process/network introspection.
# azure-storage-blob and asyncpg are pinned to the same versions as api/db extras.
isolation-tests = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "anyio==4.14.0",
    "asyncpg==0.30.0",
    "azure-storage-blob[aio]==12.24.0",
    "psutil==6.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
# openkb is now in openkb-core; platform only ships the service packages
packages = ["compiler_worker", "generator_api"]
